Added Images, refactored Layout

--- a/XfOrientation/XfOrientation/XfOrientation/Views/ComplimentaryLayoutPage.xaml
+++ b/XfOrientation/XfOrientation/XfOrientation/Views/ComplimentaryLayoutPage.xaml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage x:Class="XfOrientation.Views.ComplimentaryLayoutPage"
+<views:BaseContentPage x:Class="XfOrientation.Views.ComplimentaryLayoutPage"
              xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:XfOrientation;assembly=XfOrientation" />
+             xmlns:local="clr-namespace:XfOrientation;assembly=XfOrientation"
+             xmlns:views="clr-namespace:XfOrientation.Views;assembly=XfOrientation" />
