--- a/XfOrientation/XfOrientation/XfOrientation/OrientationPage.xaml
+++ b/XfOrientation/XfOrientation/XfOrientation/OrientationPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage x:Class="XfOrientation.OrientationPage"
+<views:BaseContentPage x:Class="XfOrientation.OrientationPage"
              xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:views="clr-namespace:XfOrientation.Views;assembly=XfOrientation">
 
 
     <ScrollView>
@@ -19,4 +20,4 @@
 
 
 
-</ContentPage>
+</views:BaseContentPage>
