--- a/XfOrientation/XfOrientation/XfOrientation/Views/FlowLayoutPage.xaml
+++ b/XfOrientation/XfOrientation/XfOrientation/Views/FlowLayoutPage.xaml
@@ -1,35 +1,26 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
 
-<ContentPage
-  x:Class         = "XfOrientation.FlowLayoutPage"
-  xmlns          = "http://xamarin.com/schemas/2014/forms"
-  xmlns:x         = "http://schemas.microsoft.com/winfx/2009/xaml"
-  Title           = "{Binding MovieQuote.Movie}"
-  BackgroundColor = "{StaticResource backgroundColor}">
+<views:BaseContentPage x:Class="XfOrientation.FlowLayoutPage"
+                       xmlns="http://xamarin.com/schemas/2014/forms"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                       xmlns:views="clr-namespace:XfOrientation.Views;assembly=XfOrientation"
+                       Title="{Binding MovieQuote.Movie}"
+                       BackgroundColor="{StaticResource backgroundColor}">
 
-  <Grid
-    Padding = "20">
+    <Grid Padding="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-    <Grid.RowDefinitions>
+        <Label Grid.Row="0"
+               Style="{StaticResource quoteText}"
+               Text="{Binding MovieQuote.Quote}" />
 
-      <RowDefinition
-        Height = "*" />
+        <Label Grid.Row="1"
+               Style="{StaticResource attributionText}"
+               Text="{Binding MovieQuote.Character}" />
 
-      <RowDefinition
-        Height = "Auto" />
+    </Grid>
 
-    </Grid.RowDefinitions>
-
-    <Label
-      Grid.Row = "0"
-      Style    = "{StaticResource quoteText}"
-      Text     = "{Binding MovieQuote.Quote}" />
-
-    <Label
-      Grid.Row = "1"
-      Style    = "{StaticResource attributionText}"
-      Text     = "{Binding MovieQuote.Character}" />
-
-  </Grid>
-
-</ContentPage>
+</views:BaseContentPage>
