--- a/XfOrientation/XfOrientation/XfOrientation/App.xaml
+++ b/XfOrientation/XfOrientation/XfOrientation/App.xaml
@@ -1,38 +1,37 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8" ?>
 
-<Application
-	xmlns ="http://xamarin.com/schemas/2014/forms"
-	xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-  xmlns:local="clr-namespace:XfOrientation;assembly=XfOrientation"
-	x:Class="XfOrientation.App">
+<Application x:Class="XfOrientation.App"
+             xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:XfOrientation;assembly=XfOrientation">
 
-  <Application.Resources>
+    <Application.Resources>
 
-     <ResourceDictionary>
-      <local:ImageResourceConverter x:Key="imageResourceCvt"/>
+        <ResourceDictionary>
+            <local:ImageResourceConverter x:Key="imageResourceCvt" />
 
-      <Color x:Key="backgroundColor">#3fa1ff</Color>
-      <Color x:Key="quoteColor">#ffffff</Color>
+            <Color x:Key="backgroundColor">#3fa1ff</Color>
+            <Color x:Key="quoteColor">#ffffff</Color>
 
-      <Style x:Key="quoteText" TargetType="Label">
-        <Setter Property="FontAttributes" Value="Italic"/>
-        <Setter Property="FontSize" Value="42"/>
-        <Setter Property="TextColor" Value="{StaticResource quoteColor}"/>
-        <Setter Property="XAlign" Value="Center"/>
-        <Setter Property="YAlign" Value="Center"/>
-      </Style>
+            <Style x:Key="quoteText" TargetType="Label">
+                <Setter Property="FontAttributes" Value="Italic" />
+                <Setter Property="FontSize" Value="36" />
+                <Setter Property="TextColor" Value="{StaticResource quoteColor}" />
+                <Setter Property="XAlign" Value="Center" />
+                <Setter Property="YAlign" Value="Center" />
+            </Style>
 
-      <Style x:Key="attributionText" TargetType="Label">
-        <Setter Property="FontAttributes" Value="Italic"/>
-        <Setter Property="FontSize" Value="12"/>
-        <Setter Property="TextColor" Value="{StaticResource quoteColor}"/>
-        <Setter Property="XAlign" Value="End"/>
-        <Setter Property="YAlign" Value="Center"/>
-      </Style>
+            <Style x:Key="attributionText" TargetType="Label">
+                <Setter Property="FontAttributes" Value="Italic" />
+                <Setter Property="FontSize" Value="12" />
+                <Setter Property="TextColor" Value="{StaticResource quoteColor}" />
+                <Setter Property="XAlign" Value="End" />
+                <Setter Property="YAlign" Value="Center" />
+            </Style>
 
-     </ResourceDictionary>
+        </ResourceDictionary>
 
-  </Application.Resources>
+    </Application.Resources>
 
 </Application>
 
