--- a/XfOrientation/XfOrientation/XfOrientation/OrientationPage.xaml
+++ b/XfOrientation/XfOrientation/XfOrientation/OrientationPage.xaml
@@ -1,22 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <views:BaseContentPage x:Class="XfOrientation.OrientationPage"
-             xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:views="clr-namespace:XfOrientation.Views;assembly=XfOrientation">
+                       xmlns="http://xamarin.com/schemas/2014/forms"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                       xmlns:views="clr-namespace:XfOrientation.Views;assembly=XfOrientation"
+                       Title="Movie Quotes">
 
 
-    <ScrollView>
-        <StackLayout x:Name="MainStack"
-                     HorizontalOptions="FillAndExpand"
-                     VerticalOptions="FillAndExpand">
-            <Label x:Name="MainText"
-                   HorizontalOptions="Center"
-                   VerticalOptions="Center" />
-            <Button Clicked="Button_OnClicked" Text="Extended Page Layout" />
-            <Button Clicked="FlowLayout_OnClicked" Text="Flow Layout" />
-            <Button Clicked="ComplimenatryLayout_OnClicked" Text="Complimentary Page Layout" />
-        </StackLayout>
-    </ScrollView>
+    <StackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+        <Label HorizontalOptions="Center" VerticalOptions="Center" />
+        <Button Clicked="FlowLayout_OnClicked" Text="Simple Flow Layout" />
+        <Button Clicked="Extended_OnClicked" Text="Extended Page Layout" />
+        <Button Clicked="ComplimenatryLayout_OnClicked" Text="Complimentary Page Layout" />
+    </StackLayout>
 
 
 
