--- a/XfOrientation/XfOrientation/XfOrientation/Views/ExtendedLayoutPage.xaml
+++ b/XfOrientation/XfOrientation/XfOrientation/Views/ExtendedLayoutPage.xaml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 
 <views:BaseContentPage x:Class="XfOrientation.ExtendedLayoutPage"
-             xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:views="clr-namespace:XfOrientation.Views;assembly=XfOrientation"
-             BackgroundColor="{StaticResource backgroundColor}">
+                       xmlns="http://xamarin.com/schemas/2014/forms"
+                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                       xmlns:views="clr-namespace:XfOrientation.Views;assembly=XfOrientation"
+                       BackgroundColor="{StaticResource backgroundColor}">
 
     <Grid ColumnSpacing="0">
         <Grid.RowDefinitions>
@@ -16,14 +16,7 @@
             <ColumnDefinition Width="AUTO" />
         </Grid.ColumnDefinitions>
 
-      <Image x:Name="RightContent"
-       Grid.Row="0"
-       Grid.Column="1"
-       Aspect="AspectFill"
-       Source="{Binding MovieQuote.Poster,
-                                Converter={StaticResource imageResourceCvt}}" />
-
-      <Grid Grid.Row="0"
+        <Grid Grid.Row="0"
               Grid.Column="0"
               Padding="20">
             <Grid.RowDefinitions>
@@ -39,10 +32,13 @@
                    Grid.Column="0"
                    Style="{StaticResource attributionText}"
                    Text="{Binding MovieQuote.Character}" />
-
         </Grid>
 
-
+        <Image x:Name="ExtendedContent"
+               Grid.Row="0"
+               Grid.Column="1"
+               Aspect="AspectFill"
+               Source="{Binding MovieQuote.Poster,
+                                Converter={StaticResource imageResourceCvt}}" />
     </Grid>
-
 </views:BaseContentPage>
