--- a/XfOrientation/XfOrientation/XfOrientation/Views/PortraitContent.xaml
+++ b/XfOrientation/XfOrientation/XfOrientation/Views/PortraitContent.xaml
@@ -1,34 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8" ?>
+<ContentView x:Class="XfOrientation.PortraitContent"
+             xmlns="http://xamarin.com/schemas/2014/forms"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             BackgroundColor="{StaticResource backgroundColor}">
 
-<ContentView
-  x:Class         = "XfOrientation.PortraitContent"
-  xmlns          = "http://xamarin.com/schemas/2014/forms"
-  xmlns:x         = "http://schemas.microsoft.com/winfx/2009/xaml"
-  BackgroundColor = "{StaticResource backgroundColor}">
+    <Grid Padding="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+        </Grid.RowDefinitions>
 
-  <Grid
-    Padding = "20">
+        <Label Grid.Row="0"
+               Style="{StaticResource quoteText}"
+               Text="{Binding MovieQuote.Quote}" />
 
-    <Grid.RowDefinitions>
+        <Label Grid.Row="1"
+               Style="{StaticResource attributionText}"
+               Text="{Binding MovieQuote.Character}" />
 
-      <RowDefinition
-        Height = "*" />
-
-      <RowDefinition
-        Height = "Auto" />
-
-    </Grid.RowDefinitions>
-
-    <Label
-      Grid.Row = "0"
-      Style    = "{StaticResource quoteText}"
-      Text     = "{Binding MovieQuote.Quote}" />
-
-    <Label
-      Grid.Row = "1"
-      Style    = "{StaticResource attributionText}"
-      Text     = "{Binding MovieQuote.Character}" />
-
-  </Grid>
-
+    </Grid>
 </ContentView>
