Added Font Size Helper in

--- a/XfOrientation/XfOrientation/XfOrientation/Views/FlowLayoutPage.xaml
+++ b/XfOrientation/XfOrientation/XfOrientation/Views/FlowLayoutPage.xaml
@@ -14,6 +14,7 @@
         </Grid.RowDefinitions>
 
         <Label Grid.Row="0"
+               x:Name="QuoteLabel"
                Style="{StaticResource quoteText}"
                Text="{Binding MovieQuote.Quote}" />
 
