--- a/XfOrientation/XfOrientation/XfOrientation/Views/FluidLayoutPage.xaml
+++ b/XfOrientation/XfOrientation/XfOrientation/Views/FluidLayoutPage.xaml
@@ -1,13 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 
-<views:BaseContentPage x:Class="XfOrientation.FlowLayoutPage"
+<views:BaseContentPage x:Class="XfOrientation.FluidLayoutPage"
                        xmlns="http://xamarin.com/schemas/2014/forms"
                        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                        xmlns:views="clr-namespace:XfOrientation.Views;assembly=XfOrientation"
                        Title="{Binding MovieQuote.Movie}"
                        BackgroundColor="{StaticResource backgroundColor}">
 
-    <Grid Padding="20">
+    <Grid Padding="20" >
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
@@ -21,7 +21,6 @@
         <Label Grid.Row="1"
                Style="{StaticResource attributionText}"
                Text="{Binding MovieQuote.Character}" />
-
     </Grid>
 
 </views:BaseContentPage>
